<resources>
    <string name="app_name">Ezi RTO</string>


    <string name="internal_storage">Internal storage</string>

    <string name="photo_1"><u>Photo 1</u></string>
    <string name="photo_2"><u>Photo 2</u></string>
    <string name="aadhar_card"><u>Aadhar Card</u></string>
    <string name="rc_book"><u>RC Book</u></string>
    <string name="insurance_1"><u>Insurance 1</u></string>
    <string name="insurance_2"><u>Insurance 2</u></string>
    <string name="puc"><u>PUC</u></string>
    <string name="bank_letter"><u>Bank Letter</u></string>
    <string name="form_17"><u>Form 17</u></string>
    <string name="bank_noc"><u>Bank NOC</u></string>
    <string name="address_proof"><u>Address Proof</u></string>
    <string name="original_license"><u>Original license</u></string>
    <string name="fir"><u>Police Report(FIR)</u></string>
    <string name="vehicle_info"><u>Vehicle Information</u></string>


    <string name="paymnet_success">Thanks for your shopping!</string>
    <string name="paymnet_product_id">Your Product id is:</string>

    <string name="payment_failure_message">The order has been cancelled</string>

    <string name="str_info">If any queries visit us at <u><font color="blue">www.sgsolutions.net.in</font></u>\nor contact on <font color="red">7030 789 789(WhatsApp only)</font></string>

    <string name="hostname">ebs</string>


    <string name="ebs_app_name">EBS</string>
    <string name="title_activity_payment_detail">PaymentDetailActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_webview">Webview</string>
    <string name="btn_send">Send</string>

    <!-- String values for text view -->
    <string name="trans_title">Transaction Details</string>
    <string name="trans_saleamt">* Sale Amount</string>
    <string name="trans_description">*Description</string>

    <!-- String values for textview billing address -->


    <string name="billing_title">Billing Address</string>
    <string name="bill_name">*Name</string>
    <string name="bill_address">*Address</string>
    <string name="bill_city">*City</string>
    <string name="bill_state">State/Province</string>
    <string name="bill_zip">*ZIP/Postal Code</string>
    <string name="bill_country">*Country</string>
    <string name="bill_email">*Email</string>
    <string name="bill_phone">Telephone</string>

    <!-- String value for delivery address -->

    <string name="deliveryaddress_title">Delivery Address</string>
    <string name="del_name">Name</string>
    <string name="del_address">Address</string>
    <string name="del_city">City</string>
    <string name="del_state">State/Province</string>
    <string name="del_zip">ZIP/Postal Code</string>
    <string name="del_country">Country</string>
    <string name="del_phone">Telephone</string>

    <!-- String Value for button name -->

    <string name="btn_submit">Submit</string>
    <string name="btn_reset">Reset</string>
    <string name="chk_save_card">Save this Card</string>


    <!-- String Value for note textview -->
    <string name="tv_note">* denotes required field</string>
    <string name="title_activity_test__transaction_details">Test_TransactionDetailsActivity</string>
    <string name="title_activity_payment_success">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_payment_failure">PaymentFailureActivity</string>


    <!--String value for payment Failure-->
    <string name="payment_failure">Thanks for your shopping!</string>
    <string name="title_activity_idle_time_out">IdleTimeOut</string>

    <string name="title_surcharge">Surcharge Amount</string>

</resources>
