<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWorkType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ededed"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorLightYellow"
                        android:gravity="center"
                        android:lines="2"
                        android:maxLines="2"
                        android:padding="5dp"
                        android:text="Actual Cost"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCost"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorWhite"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorLightYellow"
                        android:gravity="center"
                        android:lines="2"
                        android:maxLines="2"
                        android:padding="5dp"
                        android:text="Amount Paid"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvAmtPaid"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorWhite"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorLightYellow"
                        android:gravity="center"
                        android:maxLines="2"
                        android:padding="5dp"
                        android:text="Amount Remaining"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvAmtRemaining"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorWhite"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableLeft="@drawable/ic_status"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:textColor="@color/colorRed"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="Attachments"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorBlack" />

            <com.ats.easyrto.util.FlowLayout
                android:id="@+id/flowLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvPhoto1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/photo_1"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvPhoto2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/photo_2"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvAadhar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/aadhar_card"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvRC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/rc_book"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvInsc1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/insurance_1"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvInsc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/insurance_2"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvPUC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/puc"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvBankLetter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/bank_letter"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvForm17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/form_17"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvBankNOC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/bank_noc"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvAddProof"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/address_proof"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvOrigLic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/original_license"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvFIR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/fir"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvVehicleInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/vehicle_info"
                    android:textColor="@color/colorBlue"
                    android:visibility="gone" />


            </com.ats.easyrto.util.FlowLayout>

            <Button
                android:id="@+id/btnPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="4dp"
                android:background="@color/colorPrimary"
                android:text="     make payment    "
                android:textColor="@color/colorBlack"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>